--- a/styles/index.css
+++ b/styles/index.css
@@ -49,7 +49,13 @@ pre[class*="language-"].line-numbers > code {
 }
 
 .custom-shiki-code {
-	text-align: left !important;
-	display: flex;
-	flex-direction: column;
+  text-align: left !important;
+  display: flex;
+  flex-direction: column;
+}
+
+.slidev-code-line-numbers .slidev-code code {
+  text-align: left;
+  display: flex;
+  flex-direction: column;
 }
